[gd_scene load_steps=5 format=3 uid="uid://bidh5lnjxo88q"]

[ext_resource type="Script" path="res://scene/lvl/debug.gd" id="1_2aiwe"]
[ext_resource type="Theme" uid="uid://6aycbqsfxlik" path="res://resource/theme_main.tres" id="2_s15bq"]
[ext_resource type="AudioStream" uid="uid://dw0uv1puv3g6p" path="res://music/105753_Heaven_remix.mp3" id="3_w3v0i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23bic"]
size = Vector2(41.5687, 5.43095)

[node name="test-lvl" type="Node2D"]
script = ExtResource("1_2aiwe")

[node name="bg" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -10.0
offset_right = 28.0
offset_bottom = 30.0
scale = Vector2(26.1651, 18.7812)
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.623529, 0, 0.623529, 1)

[node name="level" type="ColorRect" parent="bg"]
layout_mode = 0
offset_top = 35.0
offset_right = 40.0
offset_bottom = 40.0

[node name="Area2D" type="Area2D" parent="bg/level"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bg/level/Area2D"]
position = Vector2(19.6129, 2.75045)
shape = SubResource("RectangleShape2D_23bic")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 381.0
offset_top = 36.0
offset_right = 658.0
offset_bottom = 192.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_s15bq")
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play BGM"

[node name="Stop" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Stop BGM"

[node name="Change" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Change Track"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to title"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Reset" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="VolUp" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Volume Up"

[node name="VolDown" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Volume Down"

[node name="bgm" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("3_w3v0i")
volume_db = -3.0

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="VBoxContainer/Change" to="." method="_on_change_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Reset" to="." method="on_reset_pressed"]
